--- a/schedule.qmd
+++ b/schedule.qmd
@@ -38,9 +38,9 @@ output: html_document
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lab 4      | W       | 1/31/2024 | Lab on Random Assignment                          |                                                                                                                 | Chapter 1, Angrist and Pischke                                                                                                                                                                                                                                                     |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Lecture 8  | Th      | 2/1/2024  | DAGs                                              | Assignment 1 due midnight Feb 2nd                                                                               | Chapter 6, 7, The Effect Book: <https://theeffectbook.net/index.html>, Chapter 3, Causal Inference: The Mixtape, <https://mixtape.scunning.com/dag.html.>                                                                                                                          |
+| Lecture 8  | Th      | 2/1/2024  | DAGs                                              | Reflection 2 due midnight Feb 4th                                                                               | Chapter 6, 7, The Effect Book: <https://theeffectbook.net/index.html>, Chapter 3, Causal Inference: The Mixtape, <https://mixtape.scunning.com/dag.html.>                                                                                                                          |
 |            |         |           |                                                   |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
-|            |         |           |                                                   | Reflection 2 due midnight Feb 4th                                                                               |                                                                                                                                                                                                                                                                                    |
+|            |         |           |                                                   | Assignment 1 due midnight Feb 5th                                                                               |                                                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 9  | T       | 2/6/2024  | Economic Development, Species Loss and Extraction |                                                                                                                 | Paper to read: Naidoo, R., & Adamowicz, W. L. (2001). Effects of economic prosperity on numbers of threatened species. Conservation Biology, 15(4), 1021-1029.                                                                                                                     |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -74,9 +74,7 @@ output: html_document
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 16 | Th      | 3/7/2024  | Differences in Differences.                       | Reflection 4 due midnight March 12th.                                                                           | Chapter 5, Angrist and Pischke.                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Lecture 17 | T       | 3/12/2024 | Conservation and its impact on labor markets.     | Assignment 3 due.                                                                                               | Paper to read: Frank, E., (2020), The Impact of the Northern Spotted Owl Conservation Plan on Local Labor Markets, working paper.                                                                                                                                                  |
-|            |         |           |                                                   |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
-|            |         |           |                                                   | Assignment 4 given (designed to help you start your final projects).                                            |                                                                                                                                                                                                                                                                                    |
+| Lecture 17 | T       | 3/12/2024 | Conservation and its impact on labor markets.     | Assignment 4 given (designed to help you start your final projects).                                            | Paper to read: Frank, E., (2020), The Impact of the Northern Spotted Owl Conservation Plan on Local Labor Markets, working paper.                                                                                                                                                  |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lab 9      | W       | 3/13/2024 | Lab on Differences in Differences.                |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
