update assignment 2 due date

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -46,7 +46,7 @@ output: html_document
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lab 5      | W       | 2/7/2024  | Lab on DAGs/Regression Analysis                   |                                                                                                                 | Chapter 2, Angrist and Pischke                                                                                                                                                                                                                                                     |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Lecture 10 | Th      | 2/8/2024  | Regression Analysis                               | Assignment 2 due midnight Feb 11th.                                                                             | Chapter 2, Angrist and Pischke                                                                                                                                                                                                                                                     |
+| Lecture 10 | Th      | 2/8/2024  | Regression Analysis                               |                                                                                                                 | Chapter 2, Angrist and Pischke                                                                                                                                                                                                                                                     |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 11 | T       | 2/13/2024 | Ecosystem Services and Land Rental Markets        |                                                                                                                 | Paper to Read: Manning, D. T., & Ando, A. (2022). Ecosystem Services and Land Rental Markets: Producer Costs of Bat Population Crashes. Journal of the Association of Environmental and Resource Economists, 9(6), 1235-1277.                                                      |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -55,6 +55,8 @@ output: html_document
 | Lecture 12 | Th      | 2/15/2024 | Instrumental Variables                            | Quiz 1 (45 minutes in class. Covers Random Assignment, Regression Analysis, DAG's, and Instrumental Variables). | Chapter 3, Angrist and Pischke                                                                                                                                                                                                                                                     |
 |            |         |           |                                                   |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
 |            |         |           |                                                   | Reflection 3 due midnight Feb 18th.                                                                             |                                                                                                                                                                                                                                                                                    |
+|            |         |           |                                                   |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
+|            |         |           |                                                   | Assignment 2 due midnight Feb 17th.                                                                             |                                                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 |            |         | 2/20/2024 | Midsemester Break                                 |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
