change quiz 2 date

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -84,7 +84,7 @@ output: html_document
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 19 | T       | 3/19/2024 | Protected Areas                                   |                                                                                                                 | Paper to read: Andam, Kwaw S, Paul J Ferraro, Katharine R E Sims, Andrew Healy, and Margaret B Holland. 2010. "Protected areas reduced poverty in Costa Rica and Thailand." Proceedings of the National Academy of Sciences of the United States of America 107 (22): 9996--10001. |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Lab 10     | W       | 3/20/2024 | Data lab.                                         | Quiz 2 (coding exercise in class).                                                                              |                                                                                                                                                                                                                                                                                    |
+| Lab 10     | W       | 3/20/2024 | No lab this week                                  | Start work on your final papers, includin Assignments 4 and 5                                                   |                                                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 20 | Th      | 3/21/2024 | Discussion on your final projects.                | Assignment 5 given (also designed to help you complete tasks related to the final project).                     | Will address issues related to your final projects.                                                                                                                                                                                                                                |
 |            |         |           |                                                   |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
@@ -94,7 +94,7 @@ output: html_document
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 21 | T       | 3/26/2024 | Protected Areas                                   |                                                                                                                 | Paper to read: Burgess, R., Costa, F. J., & Olken, B. A. (2018). Wilderness Conservation and the Reach of the State: Evidence from National Borders in the Amazon (No. w24861). National Bureau of Economic Research                                                               |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Lab 11     | W       | 3/27/2024 | Data lab.                                         |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
+| Lab 11     | W       | 3/27/2024 | Data lab.                                         | Quiz 2 (coding exercise in class).                                                                              |                                                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 22 | Th      | 3/28/2024 | Reintroduction and Local Economies.               | Referee report assigned.                                                                                        | Paper to read: Li, L., & Ando, A. W. (2022). The impact of bison reintroduction on local economies. Agricultural and Resource Economics Review, 51(3), 455-472.                                                                                                                    |
 |            |         |           |                                                   |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
