--- a/schedule.qmd
+++ b/schedule.qmd
@@ -84,7 +84,7 @@ output: html_document
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 19 | T       | 3/19/2024 | Protected Areas                                   |                                                                                                                 | Paper to read: Andam, Kwaw S, Paul J Ferraro, Katharine R E Sims, Andrew Healy, and Margaret B Holland. 2010. "Protected areas reduced poverty in Costa Rica and Thailand." Proceedings of the National Academy of Sciences of the United States of America 107 (22): 9996--10001. |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Lab 10     | W       | 3/20/2024 | No lab this week                                  | Start work on your final papers, includin Assignments 4 and 5                                                   |                                                                                                                                                                                                                                                                                    |
+| Lab 10     | W       | 3/20/2024 | No lab this week                                  | Start work on your final papers, including Assignments 4 and 5                                                  |                                                                                                                                                                                                                                                                                    |
 +------------+---------+-----------+---------------------------------------------------+-----------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Lecture 20 | Th      | 3/21/2024 | Discussion on your final projects.                | Assignment 5 given (also designed to help you complete tasks related to the final project).                     | Will address issues related to your final projects.                                                                                                                                                                                                                                |
 |            |         |           |                                                   |                                                                                                                 |                                                                                                                                                                                                                                                                                    |
